Work on API key to make it work

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -8,7 +8,7 @@
       <h3>{{news.publishedAt}}</h3>
     </div>
 
-    source = news_article.get('source')
+    <!-- source = news_article.get('source')
         source_name = source.get('name')
         source_url= news_article.get('url')
         author_name=news_article.get('author')
@@ -17,4 +17,4 @@
         article=news_article.get('content')
         timeOfCreation=news_article.get('publishedAt')
         news_article = News(source_name,source_url,author_name,imageUrl,description,article,timeOfCreation)
-        news_articles.append(news_article)
+        news_articles.append(news_article) -->
