--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -6,7 +6,7 @@
     <ul class='nav navbar-nav'>
       <li class='active'><a href="#">Home</a></li>
     </ul>
-    <form class="navbar-form navbar-left">
+    <!-- <form class="navbar-form navbar-left">
       <div class="input-group">
         <input type="text" name="news_query" placeholder="Search for a Movie" class="form-control">
         <div class="input-group-btn">
@@ -15,7 +15,7 @@
           </button>
         </div>
       </div>
-    </form>
+    </form> -->
   </div>
 </nav>
         <!-- <input type="submit"  value="Submit" class="btn btn-default"> -->
