Adding a for loop in macro.html to get news objects

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -7,7 +7,8 @@
       <p>{{news.description}}</p>
       <h3>{{news.publishedAt}}</h3>
     </div>
-
+  {% endfor %}
+{% endmacro %}
     <!-- source = news_article.get('source')
         source_name = source.get('name')
         source_url= news_article.get('url')
