--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,9 @@
 {% block content %}
 
   <div class="container">
-    <h2>Highlights</h2>
+    <h1>Highlights</h1>
+    <h3>{{title}}</h3>
+
     <ul>
       {{macro.displayNewsList(general)}}
     </ul>
