--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,7 +1,7 @@
 {% macro displayNewsList(news_list) %}
 
   {% for news in news_list %}
-    <a href="/news/{{news.source_url}}"></a>
+    <a href="{{news.source_url}}">{{news.title|truncate(10)}}</a>
     <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 ">
       <img src="{{news.imageUrl}}" alt="" class="img-responsive">
       <p>{{news.description}}</p>
