--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,12 @@
 {% endblock %}
 {% block content %}
 
-  <div class="container">
+  <div class="jumbotron">
     <h1>Highlights</h1>
     <h3>{{title}}</h3>
+  </div>
 
+<div class="container">
     <ul>
       {{macro.displayNewsList(general)}}
     </ul>
