--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,12 +1,11 @@
 {% macro displayNewsList(news_list) %}
 
   {% for news in news_list %}
-    <a href="{{news.source_url}}">source</a>
-    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 ">
+      <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 ">
       <img src="{{news.imageUrl}}" alt="" class="img-responsive">
       <p>{{news.description}}</p>
-      <h3>{{news.timeOfCreation}}</h3>
-      <a href="{{news.source_url}}">source</a>
+      <h6>Time of Creation:{{news.timeOfCreation}}</h6>
+      <a href="{{news.source_url}}">News Source</a>
     </div>
   {% endfor %}
 {% endmacro %}
